bk_ida/gccida/g3/find_dummy_reload
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_dummy_reload/src/reload.c:2296:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inmode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_dummy_reload/src/reload.c:2297:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode outmode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_dummy_reload/src/reload.c:2298:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class classa, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_dummy_reload/src/reload.c:2303:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v11; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_dummy_reload/src/reload.c:2308:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v16; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_dummy_reload/src/reload.c:2313:4: error: expected ';' after expression
rtx v21; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_dummy_reload/src/reload.c:2313:5: error: use of undeclared identifier 'v21'
rtx v21; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_dummy_reload/src/reload.c:2314:4: error: expected ';' after expression
rtx v22; // r8 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_dummy_reload/src/reload.c:2314:5: error: use of undeclared identifier 'v22'
rtx v22; // r8 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_dummy_reload/src/reload.c:2317:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v25; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_dummy_reload/src/reload.c:2319:4: error: expected ';' after expression
rtx v27; // r8 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_dummy_reload/src/reload.c:2319:5: error: use of undeclared identifier 'v27'
rtx v27; // r8 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_dummy_reload/src/reload.c:2329:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_dummy_reload/src/reload.c:2329:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_dummy_reload/src/reload.c:2330:4: error: expected ';' after expression
rtx v39; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_dummy_reload/src/reload.c:2330:5: error: use of undeclared identifier 'v39'
rtx v39; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_dummy_reload/src/reload.c:2331:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v40; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_dummy_reload/src/reload.c:2347:4: error: expected ';' after expression
rtx v56; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_dummy_reload/src/reload.c:2347:5: error: use of undeclared identifier 'v56'
rtx v56; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_dummy_reload/src/obj/reload.o] Error 1
